[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/parabens.gd" type="Script" id=1]
[ext_resource path="res://HandWriting.otf" type="DynamicFontData" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://imagens/confete.png" type="Texture" id=4]
[ext_resource path="res://party-horn-68443.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[node name="parabens" type="Node2D"]
script = ExtResource( 1 )

[node name="recomecar" type="Button" parent="."]
margin_left = 372.0
margin_top = 483.0
margin_right = 563.0
margin_bottom = 537.0
rect_scale = Vector2( 1.44, 1.44 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "recomeçar"
icon_align = 1
expand_icon = true

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 44.0
margin_top = 32.0
margin_right = 945.0
margin_bottom = 461.0
custom_fonts/font = SubResource( 5 )
text = "Parabéns!!!

você adquiriu a sabedoria godotiana e não se deixa levar pelo óbvio.

siga sua jornada em paz e que o espírito de paciência e sabedoria do Godot esteja com você"
align = 1
autowrap = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 612.0
margin_top = 4.0
margin_right = 863.0
margin_bottom = 144.0
rect_scale = Vector2( 0.68, 0.68 )
texture_normal = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 10.0

[connection signal="pressed" from="recomecar" to="." method="_on_recomecar_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
